# AsepriteToSFMLImage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  convert.cpp  convert.h
Aseprite/SFML/: convert.cpp  convert.h
example/: CMakeLists.txt  Sprite-0001.ase  Sprite-0002.ase  main.cpp
